--- a/style.css
+++ b/style.css
@@ -3,6 +3,14 @@ margin:0 ;
 padding:0 ;
 }
 
+
+:root{
+    --azul: #023047;
+    --vermelho:#d62828;
+    --marrom:#3c1518;
+    --amarelo-queimado:#ffb703;
+}
+
 .cabecalho{
     background-color:#231a5b ;
     color:white ;
@@ -25,4 +33,23 @@ padding:0 ;
     font-size:1.5em ;
 
 }
+.escola{
+   background-color:whitesmoke;
+   color:black;
+   display:flex;
+   justify-coment:center;
+   padding:32px 0;
+}
+
+.escola-texto-titulo{
+   padding:24px 0;
+}
+
+
+.escola-imagem{
+    width:25%;
+}
+
+
+ 
 
