--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 *{
 margin:0 ;
 padding:0 ;
@@ -9,6 +11,8 @@ padding:0 ;
     --vermelho:#d62828;
     --marrom:#3c1518;
     --amarelo-queimado:#ffb703;
+    --fonte-texto: "Roboto", sans-serif;
+    --fonte-titulo:"Roboto", sans-serif;
 }
 
 .cabecalho{
@@ -37,7 +41,7 @@ padding:0 ;
    background-color:whitesmoke;
    color:black;
    display:flex;
-   justify-coment:center;
+   justify-content:center;
    padding:32px 0;
 }
 
