--- a/style.css
+++ b/style.css
@@ -1,59 +1,59 @@
-@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ojuju:wght@700&family=Truculenta:opsz,wght@12..72,100..900&display=swap');
 
 *{
-margin:0 ;
-padding:0 ;
+    margin: 0;
+    padding: 0;
 }
-
 
 :root{
-    --azul: #023047;
-    --vermelho:#d62828;
-    --marrom:#3c1518;
-    --amarelo-queimado:#ffb703;
-    --fonte-texto: "Roboto", sans-serif;
-    --fonte-titulo:"Roboto", sans-serif;
+    --azul: #003049;
+    --vermelho: #D62828;
+    --amarelo-queimado: #F77F00;
+    --amarelo: #FCBF49;
+    --branco: #f5f5f5;
+    --preto: #000000;
+    --fonte-texto: "Truculenta", sans-serif;
+    --fonte-titulo: "Ojuju", sans-serif;
 }
 
+
 .cabecalho{
-    background-color:#231a5b ;
-    color:white ;
-    display:flex ;
+    background-color: var(--azul);
+    color: var(--amarelo-queimado);
+    display: flex;
     align-items: center;
     justify-content: space-between;
-    padding:0 2em ;
+    padding: 0 2em;
 }
 
 .cabecalho-imagem{
-    width:5%;
+    width: 5%;
     border-radius: 100%;
     margin: 1em;
-}  
-    
-.cabecalho-lista-link{     
-    text-decoration: none;
-    color:white;
-    margin-right:1.5em ;
-    font-size:1.5em ;
-
 }
+
+.cabecalho-lista-link{
+    text-decoration: none;
+    color: var(--amarelo-queimado);
+    margin-right: 1.5em;
+    font-size: 1.5em;
+}
+
 .escola{
-   background-color:whitesmoke;
-   color:black;
-   display:flex;
-   justify-content:center;
-   padding:32px 0;
+    background-color: var(--branco);
+    color: var(--preto);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 32px 0;
+    font-family: var(--fonte-texto);
 }
 
 .escola-texto-titulo{
-   padding:24px 0;
+    padding: 24px 0;
+    font-family: var(--fonte-titulo);
 }
-
 
 .escola-imagem{
-    width:25%;
+    width: 25%;
 }
-
-
- 
-
