--- a/style.css
+++ b/style.css
@@ -57,3 +57,13 @@
 .escola-imagem{
     width: 25%;
 }
+
+.estudante-estudante-div-fotos{
+    width: 25%;
+}
+    .estudante-estudante-div-icone{
+        width:24px;
+    }
+.estudante-estudante-div{
+    text-align: center;
+}
